--- a/dishes/vegetable_dish/西红柿炒鸡蛋.md
+++ b/dishes/vegetable_dish/西红柿炒鸡蛋.md
@@ -28,12 +28,15 @@
 
 ## 操作
 
-- 西红柿洗净
-- 可选：去掉西红柿的外表皮
-  - 开水烫表皮，然后将西红柿放入冷水，剥去外皮
-- 西红柿去蒂，切成边长不超过 4cm 的小块，即为 `西红柿块`
 - 将鸡蛋打入碗中，加入 `1g * 份数` 的盐，搅匀，即为 `鸡蛋液`
   - 可以考虑向鸡蛋中加入 1ml 醋，这可以去除腥味，令鸡蛋更蓬松
+- 可选：去掉西红柿的外表皮
+  - 去皮的几种方法：
+    - 用勺子或筷子擀西红柿的表面，这样表皮内部与西红柿接触处软烂，然后切开口子，可以轻松用手剥皮
+    - 用叉子或筷子插入西红柿蒂的位置，放在燃气灶火上烤至外皮裂开，然后用手剥去
+    - 开水烫表皮，然后将西红柿放入冷水，剥去外皮
+- 西红柿去蒂，切成边长不超过 4cm 的小块，即为 `西红柿块`
+
 - 热锅，加入食用油
 - 油热后，倒入 `鸡蛋液`。翻炒至鸡蛋结为固体且颜色微微发黄，即为 `半熟鸡蛋`
 - 关火。将 `半熟鸡蛋` 盛盘，重新开火
@@ -43,6 +46,7 @@
   - 可以考虑加入 10ml 番茄酱和 50ml 清水，增加汤汁
   - 可以额外加入一些其它熟肉和材料
 - 加入剩余的盐、糖（可选，如果倾向于甜味版本）、葱花（可选），翻炒均匀
+
 - 关火，盛盘
 
 ## 附加内容
@@ -51,7 +55,7 @@
 
 * 快速做法：
   - 直接在有`半熟鸡蛋`的锅中加入 `西红柿块`，与鸡蛋一起翻炒直至西红柿软烂
-  - 继续 第 10 步
+  - 继续后续加其他调料的步骤
 * 加入盐 改为 “加入两滴生抽”
 
 如果您遵循本指南的制作流程而发现有问题或可以改进的流程，请提出 Issue 或 Pull request 。
