--- a/dishes/vegetable_dish/西红柿炒鸡蛋.md
+++ b/dishes/vegetable_dish/西红柿炒鸡蛋.md
@@ -42,6 +42,7 @@
 - 关火。将 `半熟鸡蛋` 盛盘，重新开火
   - 注意：不要洗锅
 - 加入 `西红柿块`，锅铲拍打并翻炒 20 秒，或至西红柿软烂
+  - 这里需要加少量水，否则只有西红柿不容易煮到软烂出水
 - 向锅中加入 `半熟鸡蛋`，翻炒均匀
   - 可以考虑加入 10ml 番茄酱和 50ml 清水，增加汤汁
   - 可以额外加入一些其它熟肉和材料
