--- a/dishes/meat_dish/回锅肉/回锅肉.md
+++ b/dishes/meat_dish/回锅肉/回锅肉.md
@@ -52,12 +52,14 @@
 
 注意，此步骤**操作要迅速，小心糊锅**
 
-1. 锅烧热，放入一层底油滑锅
+1. 锅内不用放油，猪肉本身就会炒出很多油
 2. 放入五花肉煸炒至肥肉透明，肉片微卷（欲称起灯盏窝），二刀肉效果最佳。
-3. 倒入豆瓣生抽混合物，5g 味精翻炒 15 秒
-4. 放入青红椒圈和小姜片，放入另 5ml 豆瓣酱翻炒 30 秒
-5. 放入蒜苗翻炒 60 秒
-6. 出锅
+3. 倒出猪肉产生的过量猪油
+4. 放入青红椒圈和小姜片翻炒至青椒炒熟
+  - 辣椒不要放太多了，太辣了
+5. 倒入豆瓣生抽混合物，5g 味精翻炒 15 秒
+6. 放入蒜苗
+7. 出锅
 
 ### 简易版本
 
