--- a/dishes/meat_dish/回锅肉/回锅肉.md
+++ b/dishes/meat_dish/回锅肉/回锅肉.md
@@ -4,27 +4,27 @@
 
 ## 必备原料和工具
 
-- 五花肉
+- 五花肉 (二刀肉更好)
+- 青红椒
 - 小葱
 - 生姜
-- 青红椒
 - 蒜苗
-- 料酒
 - 豆瓣酱
 - 生抽酱油
+- 料酒
 - 味精
 
 ## 计算
 
-- 五花肉的用量为 0.5 斤/男人 0.3 斤/女人 （正宗回锅肉使用二刀肉[俗称：臀尖]制作，肉质坚实，肥瘦合适）
+- 五花肉的用量为 0.5 斤/男人 0.3 斤/女人 （正宗回锅肉使用二刀肉(俗称：臀尖)制作，肉质坚实，肥瘦合适）
+- 青红椒（根据受辣程度选择, 0-30g）*注：不建议使用肉厚的菜椒
 - 小葱 2 棵
 - 生姜 10-40g
-- 青红椒（根据受辣程度选择, 0-30g）*注：不建议使用肉厚的菜椒
 - 蒜苗 1 把
-- 料酒 5ml
 - 豆瓣酱 10ml
-- 味精 5g
 - 生抽 5ml
+- 料酒 5ml
+- 味精 5g
 
 ## 操作
 
@@ -32,9 +32,14 @@
 
 - 锅烧热，用手将五花肉紧紧压在锅上炙皮
   - 这一步是为了处理猪皮上的汗腺（或者买肉的时候让师傅烧一下皮，喜欢汗腺的可以无视）
-- 用钢丝球把皮刷干净，至黑色部分碳化部分被完全去除，不刷干净会有苦味
 - 将五花肉放入锅中，放入能淹没五花肉的冷水，放入生姜片、料酒和小葱（取 2 棵小葱打结）
 - 开大火煮，水开后撇去浮沫，继续煮 15 分钟，煮至瘦肉部分可以用筷子轻松刺穿
+
+### 五花肉二段处理
+
+- 将煮熟的五花肉捞出放入冷水晾凉
+- 猪皮完全切除，口感更好
+- 擦干五花肉的水，切成上肥下瘦的 2mm 的薄片（切厚了口感不好，而且很油）
 
 ### 配菜处理
 
@@ -43,18 +48,13 @@
 - 生姜切小薄片
 - 将 5ml 豆瓣酱和 5ml 生抽提前混合
 
-### 五花肉二段处理
-
-- 将煮熟的五花肉捞出放入冷水晾凉
-- 擦干五花肉的水，切成上肥下瘦的 2mm 的薄片（切厚了口感不好，而且很油）
-
 ### 开始炒肉
 
 注意，此步骤**操作要迅速，小心糊锅**
 
 1. 锅内不用放油，猪肉本身就会炒出很多油
 2. 放入五花肉煸炒至肥肉透明，肉片微卷（欲称起灯盏窝），二刀肉效果最佳。
-3. 倒出猪肉产生的过量猪油
+3. 将猪肉产生的过量猪油倒出
 4. 放入青红椒圈和小姜片翻炒至青椒炒熟
   - 辣椒不要放太多了，太辣了
 5. 倒入豆瓣生抽混合物，5g 味精翻炒 15 秒
