--- a/dishes/meat_dish/鱼香肉丝.md
+++ b/dishes/meat_dish/鱼香肉丝.md
@@ -29,12 +29,14 @@
 ### 制作腌料和香碗汁
 
 * 制作`腌料`：将下列原料混合：
-  * 生抽 5ml
   * 料酒 5ml
+  * 生抽 5ml
+  * 蛋清 1 个
+  * 盐
   * 淀粉 5g
   * 水 20ml
-  * 蛋清 1 个
 * 制作`香汁`：将下列原料混合：
+  * 料酒
   * 生抽 5ml
   * 醋 15ml
   * 白糖 10 克
@@ -44,10 +46,10 @@
 
 ### 处理原料
 
-* 用`腌料`腌制里脊肉 15-30 分钟。注意将肉抓匀。
 * 干木耳泡 4 个小时，洗净，切成小块。
-* 青椒洗净，去蒂，切成丝。
+* 用`腌料`腌制里脊肉 15-30 分钟。注意将肉抓匀。
 * 胡萝卜洗净，切成丝，将胡萝卜丝[焯水](../../tips/learn/学习焯水.md)。
+* 青椒洗净，去蒂，切成丝。
 * 姜、蒜切沫。
 * 葱切成 5mm 的小段。
 
@@ -61,6 +63,11 @@
 * 倒入`炒过的肉`。快速翻炒均匀。注意不要炒超过 20 秒。
 * 倒入`香汁`。快速翻炒均匀。注意不要炒超过 15 秒。
 * 关火，盛盘。
+
+### 备注
+* 如何不粘锅
+- 热锅凉油，形成油膜
+- 肉丝腌制时加一小勺油
 
 ## 附加内容
 
